tree-sitter-p4/corpus/Includes.txt
================================================================================
standard includes
================================================================================

/* -*- P4_16 -*- */
#include <core.p4>
#include <v1model.p4>

--------------------------------------------------------------------------------

(source_file
  (comment)
  (preproc_include
    (STRING_LITERAL))
  (preproc_include
    (STRING_LITERAL)))
